se añaden nuevos  templates y se realizan ajustes de uso

--- a/src/integrations/templates/order-confirmation.ejs
+++ b/src/integrations/templates/order-confirmation.ejs
@@ -36,8 +36,9 @@
 
         <!-- Mensaje principal de agradecimiento -->
         <h1>¡Gracias por tu compra!</h1>
-        <p>Hola <%= order.user.first_name %>, hemos recibido tu pedido <strong>#<%= order.id %></strong> y se está procesando, recibirás un email cuando se envíe.</p>
-        <p>A continuación encontrarás los detalles.</p>
+        <p>Hola <%= order.user.first_name %>,</p> 
+        <p>Hemos recibido tu pedido <strong>#<%= order.id %></strong> y se está procesando, recibirás otro email cuando se envíe.</p>
+        <p>Te mostramos los detalles a continuación:</p>
 
         <!-- Sección: Información del pedido -->
         <div class="section-title">Información del pedido</div>
