--- a/src/integrations/templates/return-approved.ejs
+++ b/src/integrations/templates/return-approved.ejs
@@ -26,7 +26,8 @@
 
     <!-- Mensaje principal indicando que la devolución ha sido aprobada -->
     <h1>Solicitud de devolución</h1>
-    <p>Hola <%= user.first_name %>, hemos revisado tu solicitud de devolución correspondiente al pedido <strong>#<%= order.id %></strong> y ha sido <strong>aprobada.</strong></p>
+    <p>Hola <%= user.first_name %>,</p>
+    <p>Hemos revisado tu solicitud de devolución correspondiente al pedido <strong>#<%= order.id %></strong> y ha sido <strong>aprobada.</strong></p>
 
     <!-- Sección de instrucciones para el usuario -->
     <div class="instructions">
