--- a/src/integrations/templates/return-rejected.ejs
+++ b/src/integrations/templates/return-rejected.ejs
@@ -26,7 +26,8 @@
 
     <!-- Mensaje principal indicando que la devolución ha sido rechazada -->
     <h1>Solicitud de devolución</h1>
-    <p>Hola <%= user.first_name %>, hemos revisado tu solicitud de devolución correspondiente al pedido <strong>#<%= order.id %></strong> y lamentablemente ha sido <strong>rechazada.</strong></p>
+    <p>Hola <%= user.first_name %>,</p> 
+    <p>Hemos revisado tu solicitud de devolución correspondiente al pedido <strong>#<%= order.id %></strong> y lamentablemente ha sido <strong>rechazada.</strong></p>
 
     <!-- Sección de instrucciones destacando posibles motivos del rechazo -->
     <div class="instructions">
